Revert "Fix for search suggestions appearing off center"
This reverts commit 0b529b7eed3128ab95b74050bb794d96b8029588.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -429,8 +429,6 @@ a.admin:hover {
   width:163px;
   border-radius: 0;
   border-top:0;
-  margin-left:auto;
-  margin-right: auto;
 }
 
 /* This sharpens the bottom corners of a search field for dropdown suggestions. */
